// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalInternalMembers /> should open with internal list with confirmed users 1`] = `
<commonstyle__ModalContainer
  animation={false}
  aria-labelledby="modal-title"
  bsSize="small"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="modal-title"
    >
      default-mailing-list-registered-confirmed
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <ReactRelayQueryRenderer
      environment={"RelayModernEnvironment()"}
      query={
        Object {
          "default": Object {
            "fragment": Object {
              "abstractKey": null,
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Fragment",
              "metadata": null,
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_users",
                },
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_participants",
                },
              ],
              "type": "Query",
            },
            "hash": "4daa20c92683125cafdab4f4d67154da",
            "kind": "Request",
            "operation": Object {
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Operation",
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "alias": "refusingMembers",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "UserEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "User",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                    "superAdmin",
                  ],
                  "handle": "connection",
                  "key": "InternalMembers_members",
                  "kind": "LinkedHandle",
                  "name": "users",
                },
                Object {
                  "alias": "refusingParticipants",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ParticipantEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "Participant",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                  ],
                  "handle": "connection",
                  "key": "InternalParticipants_participants",
                  "kind": "LinkedHandle",
                  "name": "participants",
                },
              ],
            },
            "params": Object {
              "cacheID": "c9d20c2d714055f5363bbaa97ee5fadb",
              "id": null,
              "metadata": Object {},
              "name": "ModalInternalMembersQuery",
              "operationKind": "query",
              "text": "query ModalInternalMembersQuery(
  $count: Int!
  $cursor: String
  $emailConfirmed: Boolean
) {
  ...InternalMembers_query_users_HnPGj
  ...InternalMembers_query_participants_HnPGj
}

fragment InternalMembers_query_participants_HnPGj on Query {
  refusingParticipants: participants(consentInternalCommunication: false, emailConfirmed: $emailConfirmed) {
    totalCount
  }
  participants(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}

fragment InternalMembers_query_users_HnPGj on Query {
  refusingMembers: users(consentInternalCommunication: false, emailConfirmed: $emailConfirmed, superAdmin: true) {
    totalCount
  }
  members: users(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true, superAdmin: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}
",
            },
          },
        }
      }
      render={[Function]}
      variables={
        Object {
          "count": 20,
          "emailConfirmed": true,
        }
      }
    />
  </ModalBody>
</commonstyle__ModalContainer>
`;

exports[`<ModalInternalMembers /> should open with internal list with not confirmed users 1`] = `
<commonstyle__ModalContainer
  animation={false}
  aria-labelledby="modal-title"
  bsSize="small"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="modal-title"
    >
      default-mailing-list-registered-not-confirmed
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <ReactRelayQueryRenderer
      environment={"RelayModernEnvironment()"}
      query={
        Object {
          "default": Object {
            "fragment": Object {
              "abstractKey": null,
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Fragment",
              "metadata": null,
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_users",
                },
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_participants",
                },
              ],
              "type": "Query",
            },
            "hash": "4daa20c92683125cafdab4f4d67154da",
            "kind": "Request",
            "operation": Object {
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Operation",
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "alias": "refusingMembers",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "UserEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "User",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                    "superAdmin",
                  ],
                  "handle": "connection",
                  "key": "InternalMembers_members",
                  "kind": "LinkedHandle",
                  "name": "users",
                },
                Object {
                  "alias": "refusingParticipants",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ParticipantEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "Participant",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                  ],
                  "handle": "connection",
                  "key": "InternalParticipants_participants",
                  "kind": "LinkedHandle",
                  "name": "participants",
                },
              ],
            },
            "params": Object {
              "cacheID": "c9d20c2d714055f5363bbaa97ee5fadb",
              "id": null,
              "metadata": Object {},
              "name": "ModalInternalMembersQuery",
              "operationKind": "query",
              "text": "query ModalInternalMembersQuery(
  $count: Int!
  $cursor: String
  $emailConfirmed: Boolean
) {
  ...InternalMembers_query_users_HnPGj
  ...InternalMembers_query_participants_HnPGj
}

fragment InternalMembers_query_participants_HnPGj on Query {
  refusingParticipants: participants(consentInternalCommunication: false, emailConfirmed: $emailConfirmed) {
    totalCount
  }
  participants(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}

fragment InternalMembers_query_users_HnPGj on Query {
  refusingMembers: users(consentInternalCommunication: false, emailConfirmed: $emailConfirmed, superAdmin: true) {
    totalCount
  }
  members: users(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true, superAdmin: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}
",
            },
          },
        }
      }
      render={[Function]}
      variables={
        Object {
          "count": 20,
          "emailConfirmed": false,
        }
      }
    />
  </ModalBody>
</commonstyle__ModalContainer>
`;

exports[`<ModalInternalMembers /> should open with internal list with registered users 1`] = `
<commonstyle__ModalContainer
  animation={false}
  aria-labelledby="modal-title"
  bsSize="small"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="modal-title"
    >
      default-mailing-list-registered
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <ReactRelayQueryRenderer
      environment={"RelayModernEnvironment()"}
      query={
        Object {
          "default": Object {
            "fragment": Object {
              "abstractKey": null,
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Fragment",
              "metadata": null,
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_users",
                },
                Object {
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "count",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "cursor",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "kind": "FragmentSpread",
                  "name": "InternalMembers_query_participants",
                },
              ],
              "type": "Query",
            },
            "hash": "4daa20c92683125cafdab4f4d67154da",
            "kind": "Request",
            "operation": Object {
              "argumentDefinitions": Array [
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "count",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "cursor",
                },
                Object {
                  "defaultValue": null,
                  "kind": "LocalArgument",
                  "name": "emailConfirmed",
                },
              ],
              "kind": "Operation",
              "name": "ModalInternalMembersQuery",
              "selections": Array [
                Object {
                  "alias": "refusingMembers",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "concreteType": "UserConnection",
                  "kind": "LinkedField",
                  "name": "users",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "UserEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "User",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": "members",
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "superAdmin",
                      "value": true,
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                    "superAdmin",
                  ],
                  "handle": "connection",
                  "key": "InternalMembers_members",
                  "kind": "LinkedHandle",
                  "name": "users",
                },
                Object {
                  "alias": "refusingParticipants",
                  "args": Array [
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": false,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "totalCount",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "concreteType": "ParticipantConnection",
                  "kind": "LinkedField",
                  "name": "participants",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "PageInfo",
                      "kind": "LinkedField",
                      "name": "pageInfo",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "hasNextPage",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "endCursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ParticipantEdge",
                      "kind": "LinkedField",
                      "name": "edges",
                      "plural": true,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "Participant",
                          "kind": "LinkedField",
                          "name": "node",
                          "plural": false,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "id",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "email",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "__typename",
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "cursor",
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": Array [
                    Object {
                      "kind": "Variable",
                      "name": "after",
                      "variableName": "cursor",
                    },
                    Object {
                      "kind": "Literal",
                      "name": "consentInternalCommunication",
                      "value": true,
                    },
                    Object {
                      "kind": "Variable",
                      "name": "emailConfirmed",
                      "variableName": "emailConfirmed",
                    },
                    Object {
                      "kind": "Variable",
                      "name": "first",
                      "variableName": "count",
                    },
                  ],
                  "filters": Array [
                    "emailConfirmed",
                    "consentInternalCommunication",
                  ],
                  "handle": "connection",
                  "key": "InternalParticipants_participants",
                  "kind": "LinkedHandle",
                  "name": "participants",
                },
              ],
            },
            "params": Object {
              "cacheID": "c9d20c2d714055f5363bbaa97ee5fadb",
              "id": null,
              "metadata": Object {},
              "name": "ModalInternalMembersQuery",
              "operationKind": "query",
              "text": "query ModalInternalMembersQuery(
  $count: Int!
  $cursor: String
  $emailConfirmed: Boolean
) {
  ...InternalMembers_query_users_HnPGj
  ...InternalMembers_query_participants_HnPGj
}

fragment InternalMembers_query_participants_HnPGj on Query {
  refusingParticipants: participants(consentInternalCommunication: false, emailConfirmed: $emailConfirmed) {
    totalCount
  }
  participants(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}

fragment InternalMembers_query_users_HnPGj on Query {
  refusingMembers: users(consentInternalCommunication: false, emailConfirmed: $emailConfirmed, superAdmin: true) {
    totalCount
  }
  members: users(first: $count, after: $cursor, emailConfirmed: $emailConfirmed, consentInternalCommunication: true, superAdmin: true) {
    pageInfo {
      hasNextPage
      endCursor
    }
    edges {
      node {
        id
        email
        __typename
      }
      cursor
    }
  }
}
",
            },
          },
        }
      }
      render={[Function]}
      variables={
        Object {
          "count": 20,
          "emailConfirmed": true,
        }
      }
    />
  </ModalBody>
</commonstyle__ModalContainer>
`;
